# SS_ALE

./: .test.s.swp  CMakeLists.txt  KURAC.txt  README.md  assembler  emulator  emulator_test  linker  makefile  test.s  test.s.save  test1.s  test2.s
inc/: Assembler.hpp  BackpatchElement.hpp  Emulator.hpp  InputThread.hpp  Linker.hpp  Memory.hpp  OutputThread.hpp  RelocationTableElement.hpp  SELF.h  Section.hpp  SymbolTable.hpp  SymbolTableElement.hpp  Thread.hpp  Timer.hpp
main/: main_assembler.cpp  main_emulator.cpp
misc/: Lexer.l  Parser.y  assembler  dump  executable  generate.sh  generate_assembler.sh  generate_linker.sh  generate_parser.sh  isr_reset.s  isr_terminal.s  isr_timer.s  ivt.s  linker  main.s  mem_context.hex  out.hex  program.hex  start.sh
pmains/: main_assembler.cpp
public_tests/: program.hex  start.sh
src/: Assembler.cpp  Emulator.cpp  InputThread.cpp  Linker.cpp  Memory.cpp  OutputThread.cpp  RelocationTableElement.cpp  Section.cpp  SymbolTableElement.cpp  Thread.cpp  Timer.cpp  crackDirective.cpp  crackInstrction.cpp  crackLabel.cpp  crack_Directive.cpp  crack_Instrction.cpp  crack_Instruction.cpp  createSElf.cpp  create_SElf.cpp  emulator_loader.cpp  handler_helpers.cpp  hex.cpp  instruction_handlers.cpp  instruction_handles.cpp  linker_loader.cpp  main.cpp  main_assembler.cpp  main_linker.cpp  objdump.cpp
tests/: badplacement1.s  badplacement2.s  equ.dump  equ_test.hex  equ_test.s  interrupts.s  main.s  program.hex  start.sh  test1.s  test2.s  test2dump  test_program.hex  testforopcode.s  testterminal.hex  testterminal.s
(+25 files in other folders)
